initialized app.js
also modified index.html & style.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <script>src="app.js" charset="UTF-8"</script>
+    <script src="app.js" charset="UTF-8"></script>
     <link rel="stylesheet" href="style.css"></link>
     <title>Tetris by Alf</title>
   </head>
